adjust form with css

--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+
         <div class="header">
             <a href="#default" class="logo">LOGO</a>
             <div class="header-right">
@@ -22,8 +23,8 @@
                 <h1>THE FIRST WEB PAGE</h1>
             </div>
         </div>
-        
-        <div style="border-radius: 5px; background-color: #f2f2f2; padding: 20px;">
+        <div class="form-center">
+            <h2 style="text-align: center;">Fill in the form below</h2>
             <form action="http://www.example.com/review.php" method="post">
                 <div>
                     <p>
