--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <nav>
-        <img src="images/logo.png" class="logo" />
+        <img src="images/logo.png" class="logo" width="250" height="80"/>
         <ul class="nav-links">
           <li><a href="#"></a>MISSION</li>
           <li><a href="#"></a>SERVICES</li>
@@ -28,8 +28,11 @@
             face, and She is the host to your journey; without Her we could not
             find the unfolding adventures that attract and feed our souls.
           </h2>
+          <a class="btn-explore">Explore</a>
         </div>
       </div>
+      <div class="sub-plan">
+
     </div>
   </body>
 </html>
