--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <nav>
-        <img src="images/logo.png" class="logo" width="250" height="80"/>
+        <img src="images/logo.png" class="logo" width="250" height="80" />
         <ul class="nav-links">
           <li><a href="#"></a>MISSION</li>
           <li><a href="#"></a>SERVICES</li>
@@ -28,11 +28,68 @@
             face, and She is the host to your journey; without Her we could not
             find the unfolding adventures that attract and feed our souls.
           </h2>
+          <br /><br />
           <a class="btn-explore">Explore</a>
         </div>
       </div>
+    </div>
+    <div>
       <div class="sub-plan">
-
+        <h1>Subcribing Plans</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="col-head">
+            <h2>FREEMIUM</h2>
+            <h1>$0</h1>
+          </div>
+          <div class="col-foot">
+            <p>Basic Collection</p>
+            <p>10 Messages</p>
+            <p>50 images per Day</p>
+            <br />
+            <a href="#" class="btn">GET STARTED</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-head">
+            <h2>FREEMIUM</h2>
+            <h1>$0</h1>
+          </div>
+          <div class="col-foot">
+            <p>Basic Collection</p>
+            <p>10 Messages</p>
+            <p>50 images per Day</p>
+            <br />
+            <a href="#" class="btn">GET STARTED</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-head">
+            <h2>FREEMIUM</h2>
+            <h1>$0</h1>
+          </div>
+          <div class="col-foot">
+            <p>Basic Collection</p>
+            <p>10 Messages</p>
+            <p>50 images per Day</p>
+            <br />
+            <a href="#" class="btn">GET STARTED</a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-head">
+            <h2>FREEMIUM</h2>
+            <h1>$0</h1>
+          </div>
+          <div class="col-foot">
+            <p>Basic Collection</p>
+            <p>10 Messages</p>
+            <p>50 images per Day</p>
+            <br />
+            <a href="#" class="btn">GET STARTED</a>
+          </div>
+        </div>
     </div>
   </body>
 </html>
