--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+    <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
     <title>Practice 1</title>
   </head>
@@ -47,46 +48,48 @@
             <p>Basic Collection</p>
             <p>10 Messages</p>
             <p>50 images per Day</p>
-            <br />
+            <br /><br>
             <a href="#" class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
           <div class="col-head">
-            <h2>FREEMIUM</h2>
-            <h1>$0</h1>
+            <h2>START UP</h2>
+            <h1>$9</h1>
           </div>
           <div class="col-foot">
-            <p>Basic Collection</p>
-            <p>10 Messages</p>
-            <p>50 images per Day</p>
-            <br />
+            <p>Multiple Collection</p>
+            <p>100 Messages</p>
+            <p>100 images per Day</p>
+            <br /><br>
             <a href="#" class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
           <div class="col-head">
-            <h2>FREEMIUM</h2>
-            <h1>$0</h1>
+            <h2>BUSINESS</h2>
+            <h1>$29</h1>
           </div>
           <div class="col-foot">
-            <p>Basic Collection</p>
-            <p>10 Messages</p>
-            <p>50 images per Day</p>
-            <br />
+            <p>Unlimited Collection</p>
+            <p>500 Messages</p>
+            <p>300 images per Day</p>
+            <p>Project Reviews</p>
+            <br /><br>
             <a href="#" class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
           <div class="col-head">
-            <h2>FREEMIUM</h2>
-            <h1>$0</h1>
+            <h2>ENTERPRISE</h2>
+            <h1>$49</h1>
           </div>
           <div class="col-foot">
-            <p>Basic Collection</p>
-            <p>10 Messages</p>
-            <p>50 images per Day</p>
-            <br />
+            <p>Unlimited Collection</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited images per Day</p>
+            <p>Project Reviews</p>
+            <br /><br>
             <a href="#" class="btn">GET STARTED</a>
           </div>
         </div>
