create hover button

--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -40,57 +40,57 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="col-head">
-            <h2>FREEMIUM</h2>
-            <h1>$0</h1>
+          <div class="col-head" style="background-image: url(./images/coffee-cup.jpg); background-size: cover; padding: 20% 20%;">
+            <h3>FREEMIUM</h3>
+            <h2>$0</h2>
           </div>
           <div class="col-foot">
             <p>Basic Collection</p>
             <p>10 Messages</p>
             <p>50 images per Day</p>
             <br /><br>
-            <a href="#" class="btn">GET STARTED</a>
+            <a class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
-          <div class="col-head">
-            <h2>START UP</h2>
-            <h1>$9</h1>
+          <div class="col-head" style="background-image: url(./images/coffee.jpg); background-size: cover; padding: 20% 20%;">
+            <h3>START UP</h3>
+            <h2>$9</h2>
           </div>
           <div class="col-foot">
             <p>Multiple Collection</p>
             <p>100 Messages</p>
             <p>100 images per Day</p>
             <br /><br>
-            <a href="#" class="btn">GET STARTED</a>
+            <a class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
-          <div class="col-head">
-            <h2>BUSINESS</h2>
-            <h1>$29</h1>
+          <div class="col-head"  style="background-image: url(./images/coffee-shop.jpg); background-size: cover; padding: 20% 20%">
+            <h3>BUSINESS</h3>
+            <h2>$29</h2>
           </div>
           <div class="col-foot">
             <p>Unlimited Collection</p>
             <p>500 Messages</p>
             <p>300 images per Day</p>
             <p>Project Reviews</p>
-            <br /><br>
-            <a href="#" class="btn">GET STARTED</a>
+            <br />
+            <a class="btn">GET STARTED</a>
           </div>
         </div>
         <div class="col">
-          <div class="col-head">
-            <h2>ENTERPRISE</h2>
-            <h1>$49</h1>
+          <div class="col-head"  style="background-image: url(./images/group-of-people-in-cafe.jpg); background-size: cover; padding: 20% 20%;">
+            <h3>ENTERPRISE</h3>
+            <h2>$49</h2>
           </div>
           <div class="col-foot">
             <p>Unlimited Collection</p>
             <p>Unlimited Messages</p>
             <p>Unlimited images per Day</p>
-            <p>Project Reviews</p>
-            <br /><br>
-            <a href="#" class="btn">GET STARTED</a>
+            <p>Project Reviews</p>         
+            <br />
+            <a class="btn">GET STARTED</a>
           </div>
         </div>
     </div>
