re-install font awsome icons

--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
+    <link rel="stylesheet" href="css/all.css" />
     <title>Practice 1</title>
   </head>
 
   <body>
+    <!--Header Page-->
+
     <div class="header">
       <nav>
         <img src="images/logo.png" class="logo" width="250" height="80" />
@@ -34,13 +37,25 @@
         </div>
       </div>
     </div>
-    <div>
+
+    <!--Subcribing Page-->
+
+    <div style="background-color: #f6f6f6">
       <div class="sub-plan">
-        <h1>Subcribing Plans</h1>
+        <h2>Subcribing Plans</h2>
       </div>
       <div class="row">
+        <!--Freemium column-->
+
         <div class="col">
-          <div class="col-head" style="background-image: url(./images/coffee-cup.jpg); background-size: cover; padding: 20% 20%;">
+          <div
+            class="col-head"
+            style="
+              background-image: url(./images/coffee-cup.jpg);
+              background-size: cover;
+              padding: 20% 20%;
+            "
+          >
             <h3>FREEMIUM</h3>
             <h2>$0</h2>
           </div>
@@ -48,12 +63,22 @@
             <p>Basic Collection</p>
             <p>10 Messages</p>
             <p>50 images per Day</p>
-            <br /><br>
+            <br /><br />
             <a class="btn">GET STARTED</a>
           </div>
         </div>
+
+        <!--Start up column-->
+
         <div class="col">
-          <div class="col-head" style="background-image: url(./images/coffee.jpg); background-size: cover; padding: 20% 20%;">
+          <div
+            class="col-head"
+            style="
+              background-image: url(./images/coffee.jpg);
+              background-size: cover;
+              padding: 20% 20%;
+            "
+          >
             <h3>START UP</h3>
             <h2>$9</h2>
           </div>
@@ -61,12 +86,22 @@
             <p>Multiple Collection</p>
             <p>100 Messages</p>
             <p>100 images per Day</p>
-            <br /><br>
+            <br /><br />
             <a class="btn">GET STARTED</a>
           </div>
         </div>
+
+        <!--Business column-->
+
         <div class="col">
-          <div class="col-head"  style="background-image: url(./images/coffee-shop.jpg); background-size: cover; padding: 20% 20%">
+          <div
+            class="col-head"
+            style="
+              background-image: url(./images/coffee-shop.jpg);
+              background-size: cover;
+              padding: 20% 20%;
+            "
+          >
             <h3>BUSINESS</h3>
             <h2>$29</h2>
           </div>
@@ -79,8 +114,18 @@
             <a class="btn">GET STARTED</a>
           </div>
         </div>
+
+        <!--Enterprise column-->
+
         <div class="col">
-          <div class="col-head"  style="background-image: url(./images/group-of-people-in-cafe.jpg); background-size: cover; padding: 20% 20%;">
+          <div
+            class="col-head"
+            style="
+              background-image: url(./images/group-of-people-in-cafe.jpg);
+              background-size: cover;
+              padding: 20% 20%;
+            "
+          >
             <h3>ENTERPRISE</h3>
             <h2>$49</h2>
           </div>
@@ -88,11 +133,32 @@
             <p>Unlimited Collection</p>
             <p>Unlimited Messages</p>
             <p>Unlimited images per Day</p>
-            <p>Project Reviews</p>         
+            <p>Project Reviews</p>
             <br />
             <a class="btn">GET STARTED</a>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!--Feature Page-->
+
+    <div>
+      <div class="feature">
+        <h2>Features</h2>
+        <br />
+        <h3>WE'RE TAKING IT TO THE NEXT LEVEL</h3>
+      </div>
+
+      <div class="left-side">
+        <i class="fa-solid fa-mobile-screen"></i>
+        <b>RESPONESIVE LAYOUT</b>
+        <br />
+        <p>
+          The past few years have seen a dramatic change in the public
+          perception of cosmetic surgery
+        </p>
+      </div>
     </div>
   </body>
 </html>
