create feature page

--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -10,7 +10,6 @@
     <title>Practice 1</title>
   </head>
 
-  <body>
     <!--Header Page-->
 
     <div class="header">
@@ -147,18 +146,57 @@
       <div class="feature">
         <h2>Features</h2>
         <br />
-        <h3>WE'RE TAKING IT TO THE NEXT LEVEL</h3>
+        <h3 style="font-size: 20px;">WE'RE TAKING IT TO THE NEXT LEVEL</h3>
       </div>
+      <div class="f-body">
+        <div class="l-side">
 
-      <div class="left-side">
-        <i class="fa-solid fa-mobile-screen"></i>
-        <b>RESPONESIVE LAYOUT</b>
-        <br />
-        <p>
-          The past few years have seen a dramatic change in the public
-          perception of cosmetic surgery
-        </p>
+        <!--Paragraph 1-->
+
+        <div style="display: flex; width: 80%;  padding-bottom: 50px; font-size: 18px;">
+          <i class="fa-solid fa-mobile-screen" style="margin-right: 10px; font-size: 40px;"></i>
+          <div class="inner">
+            <b>RESPONESIVE LAYOUT</b>
+            <p>
+              The past few years have seen a dramatic change in the public
+              perception of cosmetic surgery
+            </p>
+          </div>
+        </div>
+
+        <!--Paragraph 2-->
+
+        <div style="display: flex; width: 80%;  padding-bottom: 50px; font-size: 18px;">
+          <i class="fa-brands fa-envira" style="margin-right: 10px; font-size: 40px;"></i>
+          <div class="inner">
+            <b>PIXEL PERFECT</b>
+          <br />
+          <p>
+            About 64% of all on-line teens say that do things online that they
+            wouldn't want their parents to know about
+          </p>
+          </div>
+        </div>
+
+        <!--Paragraph 3-->
+
+        <div style="display: flex; width: 80%;  padding-bottom: 50px; font-size: 18px;">
+          <i class="fa-solid fa-bars" style="margin-right: 10px; font-size: 40px;"></i>
+          <div class="inner">
+            <b>ORGANIZED LAYERS</b>
+          <br />
+          <p>
+            Are you on of the thousands of iPhone owners who has no idea that
+            they can get free games for their phone?
+          </p>
+          </div>
+        </div>
       </div>
+        <div class="r-side">
+          <img src="./images/macbook.jpg" />
+        </div>
+    </div>
+    
     </div>
   </body>
 </html>
