change structure folder

--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-    <link rel="stylesheet" href="./style/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./style/style.css" />
-    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/main.css" />
+    <link rel="stylesheet" href="./assets/font-awesome-icon/all.css" />
     <title>Practice 1</title>
   </head>
 
@@ -14,7 +14,7 @@
 
     <div class="header">
       <nav>
-        <img src="images/logo.png" class="logo" width="250" height="80" />
+        <img src="./assets/images/logo.png" class="logo" width="250" height="80" />
         <ul class="nav-links">
           <li><a href="#"></a>MISSION</li>
           <li><a href="#"></a>SERVICES</li>
@@ -50,7 +50,7 @@
           <div
             class="col-head"
             style="
-              background-image: url(./images/coffee-cup.jpg);
+              background-image: url(./assets/images/coffee-cup.jpg);
               background-size: cover;
               padding: 20% 20%;
             "
@@ -73,7 +73,7 @@
           <div
             class="col-head"
             style="
-              background-image: url(./images/coffee.jpg);
+              background-image: url(./assets/images/coffee.jpg);
               background-size: cover;
               padding: 20% 20%;
             "
@@ -96,7 +96,7 @@
           <div
             class="col-head"
             style="
-              background-image: url(./images/coffee-shop.jpg);
+              background-image: url(./assets/images/coffee-shop.jpg);
               background-size: cover;
               padding: 20% 20%;
             "
@@ -120,7 +120,7 @@
           <div
             class="col-head"
             style="
-              background-image: url(./images/group-of-people-in-cafe.jpg);
+              background-image: url(./assets/images/group-of-people-in-cafe.jpg);
               background-size: cover;
               padding: 20% 20%;
             "
@@ -193,7 +193,7 @@
         </div>
       </div>
         <div class="r-side">
-          <img src="./images/macbook.jpg" />
+          <img src="./assets/images/macbook.jpg" />
         </div>
     </div>
     
