--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -12,7 +12,7 @@
 
     <!--Header Page-->
 
-    <div class="header">
+    <header class="header">
       <nav>
         <img src="./assets/images/logo.png" class="logo" width="250" height="80" />
         <ul class="nav-links">
@@ -25,17 +25,17 @@
       <div class="heading">
         <div class="heading-title">
           <h1>WHAT MAKES A HOTEL BOUTIQUE</h1>
-          <h2>
+          <p>
             As conscious traveling Paupers we must always be concerned about our
             dear Mother Earth. If you think about it, you travel across her
             face, and She is the host to your journey; without Her we could not
             find the unfolding adventures that attract and feed our souls.
-          </h2>
+          </p>
           <br /><br />
-          <a class="btn-explore">Explore</a>
+          <a href="#" class="btn-explore">Explore</a>
         </div>
       </div>
-    </div>
+    </header>
 
     <!--Subcribing Page-->
 
