remove style in html file

--- a/practice1/src/index.html
+++ b/practice1/src/index.html
@@ -44,18 +44,15 @@
 
     <!--Subcribing Page-->
 
-    <div style="background-color: #f6f6f6">
-      <div class="sub-plan">
+    <div class="sub-plan">
+      <div class="sub-plan-head">
         <h2>Subcribing Plans</h2>
       </div>
-      <div class="row">
+      <div class="sub-plan-row">
         <!--Freemium column-->
 
         <div class="col">
-          <div
-            class="col-head"
-            style="background-image: url(./assets/images/coffee-cup.jpg)"
-          >
+          <div class="col-head">
             <h2>FREEMIUM</h2>
             <h3>$0</h3>
           </div>
@@ -71,10 +68,7 @@
         <!--Start up column-->
 
         <div class="col">
-          <div
-            class="col-head"
-            style="background-image: url(./assets/images/coffee.jpg)"
-          >
+          <div class="col-head-2">
             <h2>START UP</h2>
             <h3>$9</h3>
           </div>
@@ -90,10 +84,7 @@
         <!--Business column-->
 
         <div class="col">
-          <div
-            class="col-head"
-            style="background-image: url(./assets/images/coffee-shop.jpg)"
-          >
+          <div class="col-head-3">
             <h2>BUSINESS</h2>
             <h3>$29</h3>
           </div>
@@ -110,12 +101,7 @@
         <!--Enterprise column-->
 
         <div class="col">
-          <div
-            class="col-head"
-            style="
-              background-image: url(./assets/images/group-of-people-in-cafe.jpg);
-            "
-          >
+          <div class="col-head-4">
             <h2>ENTERPRISE</h2>
             <h3>$49</h3>
           </div>
@@ -137,24 +123,15 @@
       <div class="feature">
         <h2>Features</h2>
         <br />
-        <h3 style="font-size: 20px">WE'RE TAKING IT TO THE NEXT LEVEL</h3>
+        <h3>WE'RE TAKING IT TO THE NEXT LEVEL</h3>
       </div>
-      <div class="f-body">
-        <div class="l-side">
+      <div class="feature-body">
+        <div class="left-side">
+
           <!--Paragraph 1-->
 
-          <div
-            style="
-              display: flex;
-              width: 80%;
-              padding-bottom: 50px;
-              font-size: 18px;
-            "
-          >
-            <i
-              class="fa-solid fa-mobile-screen"
-              style="margin-right: 10px; font-size: 40px"
-            ></i>
+          <div class="feature-param">
+            <i class="fa-solid fa-mobile-screen"></i>
             <div class="inner">
               <b>RESPONESIVE LAYOUT</b>
               <p>
@@ -166,18 +143,8 @@
 
           <!--Paragraph 2-->
 
-          <div
-            style="
-              display: flex;
-              width: 80%;
-              padding-bottom: 50px;
-              font-size: 18px;
-            "
-          >
-            <i
-              class="fa-brands fa-envira"
-              style="margin-right: 10px; font-size: 40px"
-            ></i>
+          <div class="feature-param">
+            <i class="fa-brands fa-envira"></i>
             <div class="inner">
               <b>PIXEL PERFECT</b>
               <br />
@@ -190,18 +157,8 @@
 
           <!--Paragraph 3-->
 
-          <div
-            style="
-              display: flex;
-              width: 80%;
-              padding-bottom: 50px;
-              font-size: 18px;
-            "
-          >
-            <i
-              class="fa-solid fa-bars"
-              style="margin-right: 10px; font-size: 40px"
-            ></i>
+          <div class="feature-param">
+            <i class="fa-solid fa-bars"></i>
             <div class="inner">
               <b>ORGANIZED LAYERS</b>
               <br />
@@ -226,7 +183,7 @@
             <p>Just look to the statistics we have generate the past years</p>
           </div>
     
-          <div class="row" style="margin-top: 20px;">
+          <div class="results-row">
             <div class="statistics">
               <div class="circle">
                 <img src="./assets/images/74.jpg" width="250px" height="240px">
