--- a/hoffmann-website/src/index.html
+++ b/hoffmann-website/src/index.html
@@ -14,12 +14,13 @@
 
     <header class="header">
       <nav>
-        <img
+        <!-- <img
           src="./assets/images/logo.png"
           class="logo"
           width="250"
           height="80"
-        />
+        /> -->
+        <div class="logo">Hofmann</div>
         <ul class="nav-links">
           <li><a href="#"></a>MISSION</li>
           <li><a href="#"></a>SERVICES</li>
@@ -170,7 +171,7 @@
           </div>
         </div>
         <div class="r-side">
-          <img src="./assets/images/macbook.jpg" />
+          <img src="./assets/images/macbook.jpg" class="macbook" />
         </div>
       </div>
     </div>
