--- a/examples-responsive/index.html
+++ b/examples-responsive/index.html
@@ -16,5 +16,16 @@
       <div class="right">Right</div>
       <div class="footer">Footer</div>
     </div>
+
+    <div class="container-2">
+      <div class="item1">item1</div>
+      <div class="item2">item2</div>
+      <div class="item3">item3</div>
+      <div class="item4">item4</div>
+      <div class="item5">item5</div>
+      <div class="item6">item6</div>
+      <div class="item7">item7</div>
+      <div class="item8">item8</div>
+    </div>
   </body>
 </html>
