--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -11,32 +11,45 @@
   </head>
 
   <body>
-    <section>
-      <div class="logo">
-        <a href="#"><img src="./assets/images/HOFMANN.png" /></a>
-      </div>
-      <nav class="navigation">
-        <a href="#">Mission</a>
-        <a href="#">Services</a>
-        <a href="#">About</a>
-        <a href="#">Take a tour</a>
-      </nav>
-      <div class="menu">
-        <div class="menu-icon">
-          <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    <div class="first-page">
+      <div class="navbar">
+        <div class="logo">
+          <a href="#"><img src="./assets/images/HOFMANN.png" /></a>
         </div>
-        <div class="close-icon">
-          <i class="fa-solid fa-xmark" onclick="showMenu()"></i>
+        <nav class="navigation">
+          <a href="#">Mission</a>
+          <a href="#">Services</a>
+          <a href="#">About</a>
+          <a href="#" class="btn">Take a tour</a>
+        </nav>
+        <div class="menu">
+          <div class="menu-icon">
+            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+          </div>
+          <div class="close-icon">
+            <i class="fa-solid fa-xmark" onclick="showMenu()"></i>
+          </div>
+        </div>
+        <script>
+          function showMenu() {
+            document.querySelector(".navigation").classList.toggle("active");
+            document.querySelector(".menu-icon").classList.toggle("hide");
+            document.querySelector(".close-icon").classList.toggle("show");
+          }
+        </script>
+      </div>
+      <div class="heading">
+        <div class="heading-title">
+          <h1>What makes a hotel boutique</h1>
+          <p>
+            As conscious traveling Paupers we must always be concerned about our
+            dear Mother Earth. If you think about it, you travel across her
+            face, and She is the host to your journey; without Her we could not
+            find the unfolding adventures that attract and feed our souls.
+          </p>
+          <a href="#" class="btn-explore">Explore</a>
         </div>
       </div>
-    </section>
-
-    <script>
-      function showMenu() {
-        document.querySelector(".navigation").classList.toggle("active");
-        document.querySelector(".menu-icon").classList.toggle("hide");
-        document.querySelector(".close-icon").classList.toggle("show");
-      }
-    </script>
+    </div>
   </body>
 </html>
