--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -14,7 +14,8 @@
     <div class="first-page">
       <div class="navbar">
         <div class="logo">
-          <a href="#"><img src="./assets/images/HOFMANN.png" /></a>
+          <!-- <img src="./assets/images/HOFMANN.png" /> -->
+          <a href="#">Hofmann</a>
         </div>
         <nav class="navigation">
           <a href="#">Mission</a>
