change structure of folder

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -24,6 +24,9 @@
           <a href="#" class="btn">Take a tour</a>
         </nav>
         <div class="menu">
+          <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+        </div>
+        <!-- <div class="menu">
           <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
           </div>
@@ -37,7 +40,7 @@
             document.querySelector(".menu-icon").classList.toggle("hide");
             document.querySelector(".close-icon").classList.toggle("show");
           }
-        </script>
+        </script> -->
       </div>
       <div class="heading">
         <div class="heading-title">
