--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
     <link rel="stylesheet" href="./assets/font-awesome-icon/all.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/main.css" />
 
     <title>Responsive Design</title>
