fix comment, remove unnecessary code

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
     <link rel="stylesheet" href="./assets/font-awesome-icon/all.css" />
-    <link rel="stylesheet" href="./styles/reset.css" />
+    <!-- <link rel="stylesheet" href="./styles/reset.css" /> -->
     <link rel="stylesheet" href="./styles/main.css" />
 
     <title>Responsive Design</title>
@@ -15,7 +15,6 @@
     <div class="first-page">
       <div class="navbar">
         <div class="logo">
-          <!-- <img src="./assets/images/HOFMANN.png" /> -->
           <a href="#">Hofmann</a>
         </div>
         <nav class="navigation">
@@ -27,21 +26,6 @@
         <div class="menu">
           <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </div>
-        <!-- <div class="menu">
-          <div class="menu-icon">
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
-          </div>
-          <div class="close-icon">
-            <i class="fa-solid fa-xmark" onclick="showMenu()"></i>
-          </div>
-        </div>
-        <script>
-          function showMenu() {
-            document.querySelector(".navigation").classList.toggle("active");
-            document.querySelector(".menu-icon").classList.toggle("hide");
-            document.querySelector(".close-icon").classList.toggle("show");
-          }
-        </script> -->
       </div>
       <div class="heading">
         <div class="heading-title">
