create header and content for subplan page

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -40,5 +40,76 @@
         </div>
       </div>
     </div>
+
+    <!-- Subcribing Page -->
+    <div class="sub-plan">
+      <div class="sub-plan-header">
+        <h2>Subcribing Plans</h2>
+      </div>
+
+      <div class="sub-plan-content">
+        <div class="price">
+          <div class="freemium">
+            <h2>Freemium</h2>
+            <h3>0</h3>
+          </div>
+          <div class="desciption">
+            <p>Basic Collection</p>
+            <p>10 Messages</p>
+            <p>50 images per Day</p>
+          </div>
+          <div class="get-started">
+            <a href="#" class="btn-get-started">GET STARTED</a>
+          </div>
+        </div>
+
+        <div class="price">
+          <div class="start-up">
+            <h2>Start up</h2>
+            <h3>9</h3>
+          </div>
+          <div class="desciption">
+            <p>Multiple Collection</p>
+            <p>100 Messages</p>
+            <p>100 images per Day</p>
+          </div>
+          <div class="get-started">
+            <a href="#" class="btn-get-started">GET STARTED</a>
+          </div>
+        </div>
+
+        <div class="price">
+          <div class="business">
+            <h2>Business</h2>
+            <h3>29</h3>
+          </div>
+          <div class="desciption">
+            <p>Unlimited Collection</p>
+            <p>500 Messages</p>
+            <p>300 images per Day</p>
+            <p>Project Reviews</p>
+          </div>
+          <div class="get-started">
+            <a href="#" class="btn-get-started">GET STARTED</a>
+          </div>
+        </div>
+
+        <div class="price">
+          <div class="enterprise">
+            <h2>Enterprise</h2>
+            <h3>49</h3>
+          </div>
+          <div class="desciption">
+            <p>Unlimited Collection</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited images per Day</p>
+            <p>Project Reviews</p>
+          </div>
+          <div class="get-started">
+            <a href="#" class="btn-get-started">GET STARTED</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
