styling subplan for tablet/desktop version

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -54,9 +54,11 @@
             <h3>0</h3>
           </div>
           <div class="desciption">
-            <p>Basic Collection</p>
-            <p>10 Messages</p>
-            <p>50 images per Day</p>
+            <p>
+              Basic Collection<br />
+              10 Messages<br />
+              50 images per Day
+            </p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
@@ -69,9 +71,11 @@
             <h3>9</h3>
           </div>
           <div class="desciption">
-            <p>Multiple Collection</p>
-            <p>100 Messages</p>
-            <p>100 images per Day</p>
+            <p>
+              Basic Collection<br />
+              100 Messages<br />
+              100 images per Day
+            </p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
@@ -84,10 +88,11 @@
             <h3>29</h3>
           </div>
           <div class="desciption">
-            <p>Unlimited Collection</p>
-            <p>500 Messages</p>
-            <p>300 images per Day</p>
-            <p>Project Reviews</p>
+            <p>
+              Unlimited Collection <br />500 Messages <br />300 images per
+              Day<br />
+              Project Reviews
+            </p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
