add comment/remove unused code

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -24,7 +24,7 @@
           <a href="#" class="btn">Take a tour</a>
         </nav>
         <div class="menu">
-          <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+          <i class="fa-solid fa-bars"></i>
         </div>
       </div>
       <div class="heading">
@@ -54,11 +54,7 @@
             <h3>0</h3>
           </div>
           <div class="desciption">
-            <p>
-              Basic Collection<br />
-              10 Messages<br />
-              50 images per Day
-            </p>
+            <p>Basic Collection 10 Messages 50 images per Day</p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
@@ -71,11 +67,7 @@
             <h3>9</h3>
           </div>
           <div class="desciption">
-            <p>
-              Basic Collection<br />
-              100 Messages<br />
-              100 images per Day
-            </p>
+            <p>Basic Collection 100 Messages 100 images per Day</p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
@@ -89,9 +81,8 @@
           </div>
           <div class="desciption">
             <p>
-              Unlimited Collection <br />500 Messages <br />300 images per
-              Day<br />
-              Project Reviews
+              Unlimited Collection 500 Messages 300 images per Day Project
+              Reviews
             </p>
           </div>
           <div class="get-started">
