remove unused p tag

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -96,10 +96,10 @@
             <h3>49</h3>
           </div>
           <div class="desciption">
-            <p>Unlimited Collection</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited images per Day</p>
-            <p>Project Reviews</p>
+            <p>
+              Unlimited Collection Unlimited Messages Unlimited images per Day
+              Project Reviews
+            </p>
           </div>
           <div class="get-started">
             <a href="#" class="btn-get-started">GET STARTED</a>
