--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -57,7 +57,7 @@
             <p>Basic Collection 10 Messages 50 images per Day</p>
           </div>
           <div class="get-started">
-            <a href="#" class="btn-get-started">GET STARTED</a>
+            <a href="#" class="btn-get-started">Get started</a>
           </div>
         </div>
 
@@ -70,7 +70,7 @@
             <p>Basic Collection 100 Messages 100 images per Day</p>
           </div>
           <div class="get-started">
-            <a href="#" class="btn-get-started">GET STARTED</a>
+            <a href="#" class="btn-get-started">Get started</a>
           </div>
         </div>
 
@@ -86,7 +86,7 @@
             </p>
           </div>
           <div class="get-started">
-            <a href="#" class="btn-get-started">GET STARTED</a>
+            <a href="#" class="btn-get-started">Get started</a>
           </div>
         </div>
 
@@ -102,10 +102,65 @@
             </p>
           </div>
           <div class="get-started">
-            <a href="#" class="btn-get-started">GET STARTED</a>
+            <a href="#" class="btn-get-started">Get started</a>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Feature Page -->
+
+    <div class="feature-page">
+      <div class="feature-header">
+        <h2>Features</h2>
+        <h3>We're taking it to the next level</h3>
+      </div>
+      <div class="feature-body">
+        <!-- Responsive layout -->
+
+        <div class="feature-param">
+          <a href="#"><img src="./assets/images/responsive-icon.png" /></a>
+          <div class="feature-content">
+            <h4>Responsive layout</h4>
+            <p>
+              The past few years have seen a dramatic change in the public
+              perception of cosmetic surgery
+            </p>
+          </div>
+        </div>
+
+        <!-- Pixel perfect -->
+
+        <div class="feature-param">
+          <a href="#"><img src="./assets/images/diamond-icon.png" /></a>
+          <div class="feature-content">
+            <h4>Pixel perfect</h4>
+            <p>
+              About 64% of all on-line teens say that do things online that they
+              wouldn't want their parents to know about
+            </p>
+          </div>
+        </div>
+
+        <!-- Organized layers -->
+
+        <div class="feature-param">
+          <a href="#"><img src="./assets/images/layers-icon.png" /></a>
+          <div class="feature-content">
+            <h4>Organized layers</h4>
+            <p>
+              Are you on of the thousands of iPhone owners who has no idea that
+              they can get free games for their phone?
+            </p>
+          </div>
+        </div>
+
+        <div class="macbook-img">
+          <img src="./assets/images/macbook.png" />
+        </div>
+      </div>
+      <!-- End Feature body -->
+    </div>
+    <!-- End Feature Page -->
   </body>
 </html>
