--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -119,7 +119,12 @@
         <!-- Responsive layout -->
 
         <div class="feature-param">
-          <a href="#"><img src="./assets/images/responsive-icon.png" /></a>
+          <div class="icon">
+            <a href="#"
+              ><img src="./assets/images/responsive-icon.png" width="30px"
+            /></a>
+          </div>
+
           <div class="feature-content">
             <h4>Responsive layout</h4>
             <p>
@@ -132,7 +137,11 @@
         <!-- Pixel perfect -->
 
         <div class="feature-param">
-          <a href="#"><img src="./assets/images/diamond-icon.png" /></a>
+          <div class="icon">
+            <a href="#"
+              ><img src="./assets/images/diamond-icon.png" width="30px"
+            /></a>
+          </div>
           <div class="feature-content">
             <h4>Pixel perfect</h4>
             <p>
@@ -145,7 +154,11 @@
         <!-- Organized layers -->
 
         <div class="feature-param">
-          <a href="#"><img src="./assets/images/layers-icon.png" /></a>
+          <div class="icon">
+            <a href="#"
+              ><img src="./assets/images/layers-icon.png" width="30px"
+            /></a>
+          </div>
           <div class="feature-content">
             <h4>Organized layers</h4>
             <p>
