--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -116,60 +116,58 @@
         <h3>We're taking it to the next level</h3>
       </div>
       <div class="feature-body">
-        <!-- Responsive layout -->
+        <!-- Feature-content -->
 
-        <div class="feature-param">
-          <div class="icon">
-            <a href="#"
-              ><img src="./assets/images/responsive-icon.png" width="30px"
-            /></a>
+        <div class="feature-content">
+          <!-- Responsive layout -->
+
+          <div class="feature-param">
+            <div class="icon">
+              <a href="#"><img src="./assets/images/responsive-icon.png" /></a>
+            </div>
+
+            <div class="feature-details">
+              <h4>Responsive layout</h4>
+              <p>
+                The past few years have seen a dramatic change in the public
+                perception of cosmetic surgery
+              </p>
+            </div>
           </div>
 
-          <div class="feature-content">
-            <h4>Responsive layout</h4>
-            <p>
-              The past few years have seen a dramatic change in the public
-              perception of cosmetic surgery
-            </p>
-          </div>
-        </div>
+          <!-- Pixel perfect -->
 
-        <!-- Pixel perfect -->
-
-        <div class="feature-param">
-          <div class="icon">
-            <a href="#"
-              ><img src="./assets/images/diamond-icon.png" width="30px"
-            /></a>
+          <div class="feature-param">
+            <div class="icon">
+              <a href="#"><img src="./assets/images/diamond-icon.png" /></a>
+            </div>
+            <div class="feature-details">
+              <h4>Pixel perfect</h4>
+              <p>
+                About 64% of all on-line teens say that do things online that
+                they wouldn't want their parents to know about
+              </p>
+            </div>
           </div>
-          <div class="feature-content">
-            <h4>Pixel perfect</h4>
-            <p>
-              About 64% of all on-line teens say that do things online that they
-              wouldn't want their parents to know about
-            </p>
-          </div>
-        </div>
 
-        <!-- Organized layers -->
+          <!-- Organized layers -->
 
-        <div class="feature-param">
-          <div class="icon">
-            <a href="#"
-              ><img src="./assets/images/layers-icon.png" width="30px"
-            /></a>
-          </div>
-          <div class="feature-content">
-            <h4>Organized layers</h4>
-            <p>
-              Are you on of the thousands of iPhone owners who has no idea that
-              they can get free games for their phone?
-            </p>
+          <div class="feature-param">
+            <div class="icon">
+              <a href="#"><img src="./assets/images/layers-icon.png" /></a>
+            </div>
+            <div class="feature-details">
+              <h4>Organized layers</h4>
+              <p>
+                Are you on of the thousands of iPhone owners who has no idea
+                that they can get free games for their phone?
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="macbook-img">
-          <img src="./assets/images/macbook.png" />
+          <img class="macbook" src="./assets/images/mac.png" alt="macbook" />
         </div>
       </div>
       <!-- End Feature body -->
