--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -173,5 +173,51 @@
       <!-- End Feature body -->
     </div>
     <!-- End Feature Page -->
+
+    <div class="results-page">
+      <div class="results-head">
+        <h2>Stunning Results</h2>
+        <p>Just look to the statistics we have generate the past years</p>
+      </div>
+
+      <div class="results-row">
+        <div class="statistics">
+          <div class="circle">
+            <img src="./assets/images/74-percent.png" width="250px" height="240px">
+          </div>
+          <div class="details">
+            <h3>Total conversion</h3>
+            <p>
+              The past few year have seen a dramatic change in the public
+              perception of cosmetic surgery
+            </p>
+          </div>
+        </div>
+
+        <div class="statistics">
+          <div class="circle">
+            <img src="./assets/images/39-percent.png" width="255px" height="240px">
+          </div>
+          <div class="details">
+            <h3>Free download</h3>
+            <p>
+              Can you image what we will be downloading in another twenty years?
+            </p>
+          </div>
+        </div>
+
+        <div class="statistics">
+          <div class="circle">
+            <img src="./assets/images/81-percent.png" width="250px" height="240px">
+          </div>
+          <div class="details">
+            <h3>Unique vistitors</h3>
+            <p>
+              WordPress, the premier free open-source bloging utility, has gone
+              through serveral upgrades in its life
+            </p>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
