styling results page mobile version

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -180,10 +180,10 @@
         <p>Just look to the statistics we have generate the past years</p>
       </div>
 
-      <div class="results-row">
+      <div class="results-body">
         <div class="statistics">
           <div class="circle">
-            <img src="./assets/images/74-percent.png" width="250px" height="240px">
+            <img src="./assets/images/74-percent.png" class="percent">
           </div>
           <div class="details">
             <h3>Total conversion</h3>
@@ -196,7 +196,7 @@
 
         <div class="statistics">
           <div class="circle">
-            <img src="./assets/images/39-percent.png" width="255px" height="240px">
+            <img src="./assets/images/39-percent.png" class="percent">
           </div>
           <div class="details">
             <h3>Free download</h3>
@@ -208,7 +208,7 @@
 
         <div class="statistics">
           <div class="circle">
-            <img src="./assets/images/81-percent.png" width="250px" height="240px">
+            <img src="./assets/images/81-percent.png" class="percent">
           </div>
           <div class="details">
             <h3>Unique vistitors</h3>
