styling for form page mobile version

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -226,27 +226,35 @@
     <!-- Form Page -->
     <div class="form-page">
       <div class="form-head">
-        <h2>Create An account</h2>
+        <h2>Create An Account</h2>
+        <!-- <div class="mountain">
+          <img
+            src="./assets/images/mountain.png"
+            class="mountain-img"
+            alt="ice-mountain"
+          />
+        </div> -->
       </div>
       <form class="form">
         <h3>Sign up</h3>
-        <div class="inputContainer">
-          <input type="email" class="input" placeholder="Your Email" />
+        <div class="inputBox">
+          <input type="email" class="input" placeholder="Email" />
         </div>
 
-        <div class="inputContainer">
-          <input type="password" class="input" placeholder="Your Password" />
+        <div class="inputBox">
+          <input type="password" class="input" placeholder="Password" />
         </div>
 
-        <div class="inputContainer">
+        <div class="inputBox">
           <input type="password" class="input" placeholder="Confirm Password" />
         </div>
 
         <div class="has-account">
-          <a href="#">Already have an account</a>
+          <a href="#">Already have an account ?</a>
         </div>
-
-        <button type="button" class="signup-btn">Sign up</button>
+        <div class="sign-up-btn">
+          <button type="button" class="signup-btn">Sign up</button>
+        </div>
       </form>
     </div>
 
