create layout footer

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+    <link rel="stylesheet" href="./assets/font-awesome-icon/all.css" />
     <link rel="stylesheet" href="./styles/main.css" />
 
     <title>Responsive Design</title>
@@ -227,13 +228,6 @@
     <div class="form-page">
       <div class="form-head">
         <h2>Create An Account</h2>
-        <!-- <div class="mountain">
-          <img
-            src="./assets/images/mountain.png"
-            class="mountain-img"
-            alt="ice-mountain"
-          />
-        </div> -->
       </div>
       <form class="form">
         <h3>Sign up</h3>
@@ -259,5 +253,45 @@
     </div>
 
     <!-- End Form Page -->
+
+    <!-- Footer -->
+
+    <footer class="footer">
+      <ul class="social-icon">
+        <li class="printerest"><i class="fa-brands fa-pinterest"></i></li>
+        <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
+        <li class="facebook"><i class="fa-brands fa-facebook"></i></li>
+      </ul>
+      <hr class="hr-line" />
+      <div class="outtro">
+        <p>
+          Hoffman UI Kit was made to help you quickly create beautiful layouts
+          of responsive websites.
+        </p>
+      </div>
+      <div class="email">
+        <input type="email" class="email-box" placeholder="Email" />
+        <button type="button" class="sub-btn">subcribe</button>
+      </div>
+      <ul class="info">
+        <li><a href="#">Hotels</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Arilines</a></li>
+        <li><a href="#">Vacations</a></li>
+        <li><a href="#">Find more</a></li>
+      </ul>
+
+      <div class="contact">
+        <p>606-965-2811</p>
+        <p>8194 Ullrich Groves Suite 986</p>
+        <p>592 Missouri Park Suite 818</p>
+      </div>
+
+      <div class="copy-right">
+        <p>Copyright © 2016 Goldenfox</p>
+      </div>
+    </footer>
+
+    <!-- End Footer -->
   </body>
 </html>
